# IHM_Unity-Qt

./: .gitignore  CMakeLists.txt  README.md  com.pb.cc  com.pb.h  connection.cpp  connection.h  createproject.cpp  createproject.ui  db  db.cpp  db.h  hash.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  projects.cpp  projects.h  projects.ui  register.cpp  register.h  register.ui  script_db.sql
IHM-Server/: packages.config
IHM-Server/Assets/Objects/: test Unity v1.fbx
IHM-Server/Assets/Scenes/: SampleScene.unity
IHM-Server/Assets/Scripts/: com.proto  serv.cs
IHM-Server/Assets/Scripts/Runtime/: Helloworld.cs  HelloworldGrpc.cs
IHM-Server/ProjectSettings/: ProjectSettings.asset
IHM-Server/proto-grpc/: helloworld.proto
IHM-client/: .gitignore  CMakeLists.txt  client.cpp  client.h  com.grpc.pb.cc  com.grpc.pb.h  com.pb.cc  com.pb.h  com.proto  connection.cpp  connection.h  connection.ui  createproject.h  db  hash.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movements.grpc.pb.cc  movements.grpc.pb.h  movements.pb.cc  movements.pb.h  movements.proto  projects.cpp  projects.ui  register.cpp  register.h  register.ui  server.cpp
IHM-client/absl/base/: attributes.h  config.h
IHM-client/google/protobuf/: port_def.inc
IHM-client/google/protobuf/io/: coded_stream.h
build-IHM-client-Bureau_x86_windows_msvc2022_pe_64bit-Debug/: CMakeCache.txt
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-3c115fd5bbdaf3e7f367.json  cmakeFiles-v1-e536521b85e86e389a81.json  codemodel-v2-c56a1fc34e41e9f47114.json  directory-.-Debug-db723b195817b6fc13ee.json  index-2024-03-12T10-27-17-0748.json  target-IHM-Debug-b9ebd0eaf51e1556d61b.json  target-IHM_autogen-Debug-0c0c18cded699d7d9a9f.json  target-IHM_autogen_timestamp_deps-Debug-8675c98b0209f3cac41c.json
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.583A4D17059569AA.idx  mainwindow.cpp.D9D0EA02E6EC0297.idx  mainwindow.h.F880C6D2CE9CD568.idx
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/IHM_autogen/: deps
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/IHM_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-IHM-client-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/IHM_autogen/include/: ui_mainwindow.h
